--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,10 +3,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ask Alice</title>
+  <title>GoAskAlice 🌈</title>
+  <link href="https://fonts.googleapis.com/css2?family=Monoton&family=Quicksand:wght@400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Welcome to Ask Alice</h1>
-  <p>Your AI-powered consulting chatbot is live.</p>
+  <div class="container">
+    <h1 class="groovy-title">GoAskAlice 🌈</h1>
+    <div class="chat-bubble">
+      <p>Alice says: “You’ve got questions, I’ve got cosmic answers.”</p>
+    </div>
+    <input type="text" placeholder="Ask Alice anything..." class="chat-input" />
+  </div>
 </body>
 </html>
