--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,13 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <div class="lava-lamp">
+  <div class="lava-glass">
+    <div class="blob blob1"></div>
+    <div class="blob blob2"></div>
+    <div class="blob blob3"></div>
+  </div>
+</div>
   <div class="container">
     <h1 class="groovy-title">GoAskAlice 🌈</h1>
     <div class="chat-bubble">
@@ -17,3 +24,4 @@
   </div>
 </body>
 </html>
+
