--- a/frontend/index.html
+++ b/frontend/index.html
@@ -40,8 +40,31 @@
       }
     }
   </script>
+  <div style="margin: 2em;">
+  <input id="questionInput" type="text" placeholder="Ask Alice..." style="width: 300px; padding: 0.5em;" />
+  <button onclick="callAgent()">Send</button>
+  <pre id="responseBox" style="margin-top: 1em;"></pre>
+</div>
+
+<script>
+  async function callAgent() {
+    const input = document.getElementById('questionInput').value;
+    const responseBox = document.getElementById('responseBox');
+
+    const res = await fetch('/api/agent', {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify({ input })
+    });
+
+    const data = await res.json();
+    responseBox.textContent = JSON.stringify(data, null, 2);
+  }
+</script>
+
 </body>
 </html>
+
 
 
 
