--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,66 +4,103 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>GoAskAlice 🌈</title>
+  <link rel="stylesheet" href="styles.css" />
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(135deg, #ff9a9e, #fad0c4);
-      color: #333;
+      background: linear-gradient(135deg, #ffccff, #ccffff);
       margin: 0;
       padding: 2rem;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
     h1 {
-      text-align: center;
-      font-size: 2rem;
+      color: #333;
     }
-    #chat-container {
+    #chatbox {
+      width: 100%;
       max-width: 600px;
-      margin: 2rem auto;
       background: white;
-      padding: 1rem;
       border-radius: 8px;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      padding: 1rem;
     }
-    input, button {
-      width: 100%;
-      padding: 0.75rem;
-      margin-top: 1rem;
-      font-size: 1rem;
-      border-radius: 4px;
+    #messages {
+      height: 300px;
+      overflow-y: auto;
+      margin-bottom: 1rem;
+    }
+    .message {
+      margin: 0.5rem 0;
+    }
+    .user {
+      text-align: right;
+      color: #0078d4;
+    }
+    .alice {
+      text-align: left;
+      color: #d40078;
+    }
+    input[type="text"] {
+      width: 80%;
+      padding: 0.5rem;
       border: 1px solid #ccc;
+      border-radius: 4px;
     }
-    #response {
-      margin-top: 1rem;
-      white-space: pre-wrap;
+    button {
+      padding: 0.5rem 1rem;
+      margin-left: 0.5rem;
+      background-color: #0078d4;
+      color: white;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+    button:hover {
+      background-color: #005a9e;
     }
   </style>
 </head>
 <body>
   <h1>GoAskAlice 🌈</h1>
-  <div id="chat-container">
+  <div id="chatbox">
+    <div id="messages"></div>
     <input type="text" id="userInput" placeholder="Ask Alice anything..." />
-    <button onclick="queryAlice()">Send</button>
-    <div id="response"></div>
+    <button onclick="sendMessage()">Send</button>
   </div>
 
   <script>
-    async function queryAlice() {
-      const input = document.getElementById('userInput').value;
-      const responseDiv = document.getElementById('response');
-      responseDiv.textContent = 'Thinking...';
+    async function sendMessage() {
+      const input = document.getElementById('userInput');
+      const message = input.value.trim();
+      if (!message) return;
+
+      appendMessage('user', message);
+      input.value = '';
 
       try {
-        const res = await fetch('/api/query', {
+        const response = await fetch('/api/query', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify({ question: input })
+          body: JSON.stringify({ question: message })
         });
 
-        const data = await res.json();
-        responseDiv.textContent = data.answer || 'No response received.';
-      } catch (err) {
-        responseDiv.textContent = 'Error querying Alice: ' + err.message;
+        const data = await response.json();
+        appendMessage('alice', data.answer || 'Hmm... I’m not sure about that.');
+      } catch (error) {
+        appendMessage('alice', 'Oops! Something went wrong.');
+        console.error(error);
       }
+    }
+
+    function appendMessage(sender, text) {
+      const messages = document.getElementById('messages');
+      const msg = document.createElement('div');
+      msg.className = `message ${sender}`;
+      msg.textContent = text;
+      messages.appendChild(msg);
+      messages.scrollTop = messages.scrollHeight;
     }
   </script>
 </body>
